--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,7 +8,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-
+  width: 1240px;
   align-items: center;
 }
 
@@ -27,4 +27,4 @@
   font-weight: 500;
   line-height: 34.22px;
   text-align: right;
-}
+  }
