--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 footer {
     margin-top: 40px;
-    width: 1240px;
+    width: 1440px;
     height: 209px;
     background: rgba(0, 0, 0, 1);
     display: flex;
@@ -8,11 +8,12 @@ footer {
     justify-content: center;
     flex-direction: column;
     gap: 30px;
+    left: 0;
 }
 img {
     color: white;
 }
-p {
+.footerp {
     color: white;
     font-family: Montserrat;
     font-size: 24px;
