--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -1,17 +1,22 @@
 .contloc {
-    padding-top: 50px ;
+    
     width: 340px;
     height: 340px;
-    gap: 0px;
+
     border-radius: 10px;
-    opacity: 0px;
+
     position: relative;
     cursor: pointer;
     z-index: 3;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+    background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(10, 10, 10, 0) 42%,
+        rgba(4, 4, 4, 0.205) 99.99%,
+        rgba(0, 0, 0, 0.5) 100%
+    );
 
     box-sizing: border-box;
-
 }
 
 .contloc img {
@@ -22,14 +27,10 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    
-
 }
-
 
 .contloc p {
     color: rgba(255, 255, 255, 1);
-    
 
     z-index: 2;
     position: inherit;
@@ -45,11 +46,11 @@
     left: 20px;
     gap: 0px;
     opacity: 0px;
-
-
 }
 
 .contenaire {
+    padding-top: 50px;
+    padding-bottom: 50px;
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
@@ -59,5 +60,4 @@
     padding-right: 50px;
     background: rgba(246, 246, 246, 1);
     border-radius: 25px;
-    ;
 }
