--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,23 @@
 #root {
-  max-width: 1240px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header{
   display: flex;
   justify-content: space-between;
+  
   }
 
 .header nav ul{
   display: flex;
 }
+
 
 
