modified:   src/componement/App.jsx 	new file:   src/componement/Starts.jsx 	modified:   src/componement/banner.jsx 	new file:   src/componement/header.jsx modified:   src/componement/logementimg.jsx 	modified:   src/css/App.css 	modified:   src/css/Banner.css 	new file:   src/css/eror.css 	modified:   src/css/footer.css 	modified:   src/css/logement.css 	modified:   src/css/maincontener.css 	new file:   src/image/banneraccueil.png 	new file:   src/image/bannerapro.png new file:   src/image/logod.png 	new file:   src/image/logotm.png 	modified:   src/main.jsx 	modified:   src/pages/Accueil.jsx 	new file:   src/pages/Eror.jsx 	modified:   src/pages/Logementdetails.jsx

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,14 +1,15 @@
 #root {
   max-width: 1240px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
+a{
+  text-decoration: none;
 
+}
 .header {
   display: flex;
   justify-content: space-between;
-  width: 1240px;
+  width: 100%;
   align-items: center;
 }
 
@@ -27,4 +28,17 @@
   font-weight: 500;
   line-height: 34.22px;
   text-align: right;
-  }
+}
+
+.header__nav__li a {
+  text-decoration: none;
+}
+
+.logo {
+  width: 210.32px;
+  height: 68px;
+}
+
+h1,h2,h3,h4,h5,a,p{
+  margin: 0;
+} 
