--- a/src/css/logement.css
+++ b/src/css/logement.css
@@ -5,11 +5,22 @@
     left: 0;
     position: absolute;
     object-fit: cover;
-   
 }
-.activate{
+.activate {
     display: none;
 }
+
+#root {
+    max-width: 1240px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
+
+.firstcontenaire{
+    margin-top: 25px ;
+}
+
 .imgcontente {
     margin-top: 50px;
     width: 1240px;
@@ -21,15 +32,15 @@
     align-items: center;
     justify-content: center;
 }
-.fa-chevron-left{
+.fa-chevron-left {
     z-index: 2;
     position: absolute;
-	cursor: pointer;
+    cursor: pointer;
     left: 10px;
     top: 200px;
     color: white;
 }
-.arrows{
+.arrows {
     width: 1240px;
     height: 415px;
     position: inherit;
@@ -38,25 +49,24 @@
     align-items: flex-end;
 }
 
-.fa-chevron-right{
+.fa-chevron-right {
     z-index: 2;
     position: absolute;
-	cursor: pointer;
+    cursor: pointer;
     right: 10px;
     top: 200px;
     color: white;
 }
 
-.picturet_lenght{
+.picturet_lenght {
     z-index: 3;
     color: white;
     position: inherit;
     font-family: Montserrat;
-font-size: 18px;
-font-weight: 500;
-line-height: 25.67px;
-text-align: center;
-
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.67px;
+    text-align: center;
 }
 .notat {
     color: rgba(255, 96, 96, 1);
