--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -1,19 +1,18 @@
-#root {
-    max-width: 1240px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-}
+
 
 .bannerpic {
-    position: absolute;
-    left: -313px;
+    position: inherit;
+    width: 100%;
+    height: 223px;
+    left: 0;
+    border-radius: 25px;
+    object-fit: cover;
     z-index: 1;
 }
 
 .title {
-    z-index: 2;
-    position: inherit;
+    position: absolute;
+    z-index: 2;    
     color: white;
     display: flex;
     justify-content: center;
@@ -24,12 +23,17 @@
     font-weight: 700;
     line-height: 68.45px;
     text-align: left;
+    background: #00000060;
+    opacity: 0.6px;
+    height: 100%;
+    margin: 0;
+    border-radius: 25px;
 }
 
 .ban {
+    width: 100%;
     margin-top: 30px;
-    display: flex;
     position: relative;
     height: 223px;
-    
+    display: flex;
 }
