--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 footer {
     margin-top: 40px;
-    width: 1440px;
+    width: 100%;
     height: 209px;
     background: rgba(0, 0, 0, 1);
     display: flex;
