--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -1,8 +1,9 @@
+
 .contloc {
     
     width: 340px;
     height: 340px;
-
+    margin: 25px;
     border-radius: 10px;
 
     position: relative;
@@ -49,15 +50,17 @@
 }
 
 .contenaire {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-top: 40px;
+    max-width: 1240px;
+    /* padding-top: 50px;
+    padding-bottom: 50px; */
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
+    /* gap: 50px; */
+    /* padding-left: 50px;
+    padding-right: 50px; */
     background: rgba(246, 246, 246, 1);
     border-radius: 25px;
 }
+
