modified:   index.html 	new file:   src/componement/Des.jsx 	new file:   src/componement/Tags.jsx 	new file:   src/componement/description.jsx 	new file:   src/componement/infohost.jsx 	modified:   src/css/App.css 	modified:   src/css/Banner.css 	modified:   src/css/logement.css 	modified:   src/css/maincontener.css 	modified:   src/pages/Logementdetails.jsx

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,12 @@
 #root {
-  max-width: 1240px;
+  min-width: 335px;
   text-align: center;
 }
 a{
   text-decoration: none;
-
 }
+
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -15,7 +16,7 @@ a{
 
 .header__nav {
   display: flex;
-  gap: 30px;
+  gap: 26px;
   justify-content: center;
   align-items: center;
 }
@@ -24,10 +25,11 @@ a{
   justify-content: center;
   align-items: center;
   font-family: Montserrat;
-  font-size: 24px;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 34.22px;
+  line-height: 17.11px;
   text-align: right;
+  
 }
 
 .header__nav__li a {
@@ -35,10 +37,33 @@ a{
 }
 
 .logo {
-  width: 210.32px;
-  height: 68px;
+  width: 145px;
+  height: 46.88px;
 }
 
 h1,h2,h3,h4,h5,a,p{
   margin: 0;
 } 
+
+
+@media screen and (min-width: 900px) {
+#root{
+  max-width: 1240px;
+}
+
+  .header__nav__li {
+
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 34.22px;
+    text-align: right;
+  }
+  .logo {
+
+    width: 210.32px;
+    height: 68px;
+    
+    
+  }
+}
