--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -3,7 +3,7 @@
 .bannerpic {
     position: inherit;
     width: 100%;
-    height: 223px;
+    height: 111px;
     left: 0;
     border-radius: 25px;
     object-fit: cover;
@@ -15,14 +15,14 @@
     z-index: 2;    
     color: white;
     display: flex;
-    justify-content: center;
+    
     align-items: center;
     width: 100%;
-    font-family: Montserrat;
-    font-size: 48px;
+    font-family: Montserrat;    
+    font-size: 24px;
     font-weight: 700;
-    line-height: 68.45px;
-    text-align: left;
+    line-height: 24px;
+    text-align: left;    
     background: #00000060;
     opacity: 0.6px;
     height: 100%;
@@ -34,6 +34,25 @@
     width: 100%;
     margin-top: 30px;
     position: relative;
-    height: 223px;
+    height: 111px;
     display: flex;
+}
+
+@media screen and (min-width: 900px) {
+    .title {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 68.45px;
+    width: 100%;
+    justify-content: center;
+}
+
+.bannerpic {    
+    height: 223px;    
+}
+
+.ban{
+    height: 223px;
+}
+
 }
