--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -1,9 +1,9 @@
 
 .contloc {
     
-    width: 340px;
-    height: 340px;
-    margin: 25px;
+    width: 335px;
+    height: 255px;
+    
     border-radius: 10px;
 
     position: relative;
@@ -32,7 +32,6 @@
 
 .contloc p {
     color: rgba(255, 255, 255, 1);
-
     z-index: 2;
     position: inherit;
     bottom: 5px;
@@ -50,17 +49,51 @@
 }
 
 .contenaire {
-    max-width: 1240px;
+    max-width: 335px;
     /* padding-top: 50px;
     padding-bottom: 50px; */
     margin-top: 50px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
     /* gap: 50px; */
     /* padding-left: 50px;
     padding-right: 50px; */
     background: rgba(246, 246, 246, 1);
     border-radius: 25px;
+    gap: 22px;
 }
 
+@media screen and (min-width: 900px) {
+
+
+    .contenaire {
+        max-width: 1240px;      
+        margin-top: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+
+    .contloc {
+    
+        width: 340px;
+        height: 340px;
+        margin: 25px;
+        border-radius: 10px;
+    
+        position: relative;
+        cursor: pointer;
+        z-index: 3;
+        background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0) 0%,
+            rgba(10, 10, 10, 0) 42%,
+            rgba(4, 4, 4, 0.205) 99.99%,
+            rgba(0, 0, 0, 0.5) 100%
+        );
+    
+        box-sizing: border-box;
+    }
+}
