--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,12 @@
 a{
   text-decoration: none;
 }
-
+main{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .header {
   display: flex;
