--- a/src/css/logement.css
+++ b/src/css/logement.css
@@ -1,5 +1,5 @@
 .img_logement {
-    width: 1240px;
+    width: 100%;
     height: 415px;
     top: 0;
     left: 0;
@@ -17,48 +17,60 @@
     text-align: center;
 }
 
-.firstcontenaire{
-    margin-top: 15px ;
+#imdg{
+    width: 100%;
 }
-.firstcontenaire p{
+.info_logement{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.firstcontenaire {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+}
+.firstcontenaire p {
     font-family: Montserrat;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 25.67px;
-    text-align: left;    
-    
-    
+font-size: 14px;
+font-weight: 500;
+line-height: 19.96px;
+text-align: left;
+
 }
+
 .firstcontenaire h1 {
-    font-family: Montserrat;
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 51.34px;
-    text-align: left;
-    color: #FF6060;
-
+    font-family: montserrat;
+    width: 335px;
+    height: 46px;
+    top: 363.88px;
+    left: 20px;
+    gap: 0px;
+    opacity: 0px;
     
+    text-align: left;
+    color: #ff6060;
 }
 
-.detailsp{
+.detailsp {
     padding-top: 10px;
     padding-left: 5px;
 }
 
-.equipementss{
+.equipementss {
     font-family: Montserrat;
-font-size: 18px;
-font-weight: 400;
-line-height: 25.67px;
-text-align: left;
-
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.67px;
+    text-align: left;
     list-style: none;
     text-align: left;
 }
 
 .imgcontente {
     margin-top: 50px;
-    width: 1240px;
+    width: 100%;
     height: 415px;
     border-radius: 25px;
     position: relative;
@@ -68,7 +80,7 @@ text-align: left;
     justify-content: center;
 }
 
-.imgcontente img{
+.imgcontente img {
     border-radius: 25px;
 }
 
@@ -115,8 +127,14 @@ text-align: left;
     color: rgba(255, 96, 96, 1);
 }
 
+.notation_starts{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .fa-star {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .notata {
@@ -129,7 +147,7 @@ text-align: left;
 }
 
 .tagss {
-    display: flex;    
+    display: flex;
     gap: 20px;
     height: 25px;
 }
@@ -159,7 +177,7 @@ text-align: left;
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 500;
-    line-height: 25.67px;    
+    line-height: 25.67px;
     width: 93px;
     height: 52px;
     top: 608px;
@@ -181,18 +199,22 @@ text-align: left;
 
 .hoste_rating {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     gap: 30px;
 }
 
 .summ {
     margin-top: 30px;
     display: flex;
+    flex-direction: column;
+    width: 100%;
     justify-content: space-between;
+    gap: 40px;
 }
 
 .summ div {
-    width: 40%;
+    width: 100%;
 }
 
 .summ div details {
@@ -207,9 +229,11 @@ text-align: left;
 
 .detailsadd {
     background: transparent;
+    width: 100% ;
 }
 
 .summayradd {
     background-color: rgba(255, 96, 96, 1);
     border-radius: 5px;
+    width: 100%;
 }
