--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -1,7 +1,7 @@
 
 .contloc {
     
-    width: 335px;
+    width: 100%;
     height: 255px;
     
     border-radius: 10px;
@@ -42,14 +42,14 @@
     text-align: left;
     width: 300px;
     height: 52px;
-    top: 268px;
+    top: 195px;
     left: 20px;
-    gap: 0px;
-    opacity: 0px;
+  
 }
 
 .contenaire {
-    max-width: 335px;
+    width: 100%;
+    min-width: 335px;
     /* padding-top: 50px;
     padding-bottom: 50px; */
     margin-top: 50px;
@@ -96,4 +96,10 @@
     
         box-sizing: border-box;
     }
+
+    .contloc p {       
+        top: 268px;        
+    }
+
+
 }
