new file:   src/assets/logowhite.png 	modified:   src/assets/react.svg 	deleted:    src/componement/App.jsx 	new file:   src/componement/Bannerapropos.jsx 	renamed:    src/componement/banner.jsx -> src/componement/Bannerhome.jsx 	renamed:    src/componement/GetData.jsx -> src/componement/Data.jsx 	deleted:    src/componement/Des.jsx 	new file:   src/componement/Details.jsx 	new file:   src/componement/Headers.jsx 	new file:   src/componement/HostInfo.jsx 	new file:   src/componement/Logements.jsx 	new file:   src/componement/Maincompement.jsx 	modified:   src/componement/Starts.jsx 	modified:   src/componement/Tags.jsx 	deleted:    src/componement/description.jsx 	modified:   src/componement/footer.jsx 	deleted:    src/componement/header.jsx 	deleted:    src/componement/infohost.jsx 	modified:   src/componement/logementimg.jsx 	new file:   src/componement/useLogementDetails.jsx 	deleted:    src/css/App.css 	modified:   src/css/Banner.css 	renamed:    src/css/apropos.css -> src/css/details.css 	modified:   src/css/footer.css 	new file:   src/css/header.css 	new file:   src/css/index.css 	modified:   src/css/maincontener.css 	deleted:    src/index.css 	modified:   src/main.jsx 	modified:   src/pages/Accueil.jsx 	modified:   src/pages/Apropos.jsx 	renamed:    src/pages/Eror.jsx -> src/pages/Error.jsx 	new file:   src/pages/Logement.jsx 	deleted:    src/pages/Logementdetails.jsx 	new file:   src/pictures/Logowhite.png 	renamed:    src/image/banneraccueil.png -> src/pictures/banneraccueil.png 	renamed:    src/image/bannerapro.png -> src/pictures/bannerapropos.png 	renamed:    src/image/logod.png -> src/pictures/logod.png 	renamed:    src/image/logotm.png -> src/pictures/logotm.png

--- a/src/css/details.css
+++ b/src/css/details.css
@@ -2,16 +2,18 @@ p {
     color: black;
 }
 
-
-.bannerapropos{
+.bannerapropos {
     margin-top: 40px;
 }
 
 details {
     background: rgba(255, 96, 96, 1);
-    width: 1023px;
+    width: 100%;
     border-radius: 5px;
-    
+    transition: max-height 8s ease-out;
+    max-height: 400px;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 summary {
@@ -30,7 +32,7 @@ summary {
 
 i {
     font-size: 32px;
-    padding-right: 10px ;
+    padding-right: 10px;
     margin: 0;
 }
 
@@ -40,7 +42,7 @@ i {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-
+    width: 100%;
 }
 
 .bgtest {
@@ -52,16 +54,23 @@ i {
     text-align: left;
     margin: 0;
     padding: 20px;
-    border-radius: 5px;
-    
+    border-radius: 0px 0px 5px 5px;
 }
 
-
-
-details[open] .rotate{
-    
-        transform: rotate(180deg);
-        padding-right: 10px ;
-        padding-left: 10px ;
-    
+details[open] .rotate {
+    transform: rotate(180deg);
+    padding-right: 10px;
+    padding-left: 10px;
+ 
 }
+
+details {
+    overflow: hidden;
+    transition: max-height 1s ease-out;
+    max-height: 34px; 
+}
+
+details[open] {
+    max-height: 400px;
+}
+
