--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -22,7 +22,7 @@
     font-weight: 700;
     line-height: 24px;
     text-align: left;    
-    background: #00000060;
+    background: #00000080;
     opacity: 0.6px;
     height: 100%;
     margin: 0;
@@ -35,6 +35,10 @@
     position: relative;
     height: 111px;
     display: flex;
+    max-width: 1240px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 25px;
+
 }
 
 @media screen and (min-width: 900px) {
