--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,24 +1,42 @@
 footer {
     margin-top: 40px;
-    width: 105%;
+    width: calc(100% + 4em) ;
     height: 209px;
     background: rgba(0, 0, 0, 1);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 30px;
-    left: 0;
+    gap: 30px;    
+    max-width: 1440px;
 }
 img {
     color: white;
+    width: 122px;
+    height: 39.44px;
 }
 .footerp {
     color: white;
     font-family: Montserrat;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 34.22px;
-    text-align: center;
-    margin: 0;
+font-size: 12px;
+font-weight: 500;
+line-height: 17.11px;
+text-align: center;
+width: 133.59px;
+
+}
+
+
+@media screen and (min-width: 900px) {
+
+    .footerp {
+    
+        font-size: 24px;
+        line-height: 34.22px;
+        width: 513px;
+        
+    
+    }
+
+
 }
