--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -44,6 +44,8 @@
     height: 52px;
     top: 195px;
     left: 20px;
+    display: flex;
+    align-items: center;
   
 }
 
@@ -80,9 +82,8 @@
     
         width: 340px;
         height: 340px;
-        margin: 25px;
-        border-radius: 10px;
-    
+        margin: 25px auto;
+        border-radius: 10px;    
         position: relative;
         cursor: pointer;
         z-index: 3;
