--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 #root {
   max-width: 1440px;
-  min-width: 350px;
+  min-width: 300px;
   width: 100%;
   padding: 2em 2em 0em 2em;
   margin: auto;
@@ -33,6 +33,6 @@ a {
   text-decoration: none;
 }
 
-p {
+p,h1,h2,h3,h4,h5,h6,a,ul,li {
   margin: 0;
 }
