--- a/src/css/hosteinfo.css
+++ b/src/css/hosteinfo.css
@@ -40,4 +40,13 @@
         width: 93px;
         height: 52px;       
     }
+
+    .hoste {
+        display: flex;
+        flex-direction: row-reverse;        
+        justify-content: flex-start;
+        text-align: right;
+        width: 100%;
+        gap: 15px;
+    }
 }
