--- a/src/css/stars.css
+++ b/src/css/stars.css
@@ -15,3 +15,10 @@
 .notata {
     color: rgba(227, 227, 227, 1);
 }
+
+@media screen and (min-width: 900px) {
+    
+    .fa-star {
+        font-size: 36px;
+    }
+}
