--- a/src/css/eror.css
+++ b/src/css/eror.css
@@ -1,30 +1,55 @@
-.errorcode{
-  
-
-font-family: Montserrat;
-font-size: 288px;
-font-weight: 700;
-line-height: 410.69px;
-text-align: center;
-color:  #FF6060;
-
-}
-
-.texterror{
+.errorcode {
     font-family: Montserrat;
-font-size: 36px;
-font-weight: 500;
-line-height: 51.34px;
-text-align: left;
-
-color: #FF6060;
-
+    font-size: 96px;
+    font-weight: 900;
+    line-height: 136px;
+    text-align: center;
+    color: #ff6060;
 }
 
-.error_page{
+.texterror {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px;
+    text-align: center;
+    width: 260px;
+    height: 52px;
+
+    color: #ff6060;
+}
+
+.error_page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  
+}
+
+@media screen and (min-width: 900px) {
+    .errorcode {
+        font-family: Montserrat;
+        font-size: 288px;
+        font-weight: 700;
+        line-height: 410.69px;
+        text-align: center;
+        color: #ff6060;
+    }
+
+    .texterror {
+        font-family: Montserrat;
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 51.34px;
+        text-align: left;
+
+        color: #ff6060;
+    }
+
+    .error_page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
