--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -1,9 +1,7 @@
-
 .contloc {
-    
     width: 100%;
     height: 255px;
-    
+
     border-radius: 10px;
 
     position: relative;
@@ -46,7 +44,6 @@
     left: 20px;
     display: flex;
     align-items: center;
-  
 }
 
 .contenaire {
@@ -55,35 +52,36 @@
     /* padding-top: 50px;
     padding-bottom: 50px; */
     margin-top: 50px;
-    display: flex;
+    display: grid;
     flex-direction: column;
+    grid-template-columns: 1fr;
     /* gap: 50px; */
     /* padding-left: 50px;
     padding-right: 50px; */
-    background: rgba(246, 246, 246, 1);
+    
     border-radius: 25px;
     gap: 22px;
 }
 
 @media screen and (min-width: 900px) {
-
-
     .contenaire {
-        max-width: 1240px;      
+        max-width: 1240px;
         margin-top: 50px;
-        display: flex;
-        flex-wrap: wrap;
+        
+        gap: 0px;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 0px ;  
         justify-content: space-between;
         flex-direction: row;
+        background: rgba(246, 246, 246, 1);
     }
 
-
     .contloc {
-    
-        width: 340px;
+        width: 90%;       
+        max-width: 340px;
         height: 340px;
         margin: 25px auto;
-        border-radius: 10px;    
+        border-radius: 10px;
         position: relative;
         cursor: pointer;
         z-index: 3;
@@ -94,13 +92,11 @@
             rgba(4, 4, 4, 0.205) 99.99%,
             rgba(0, 0, 0, 0.5) 100%
         );
-    
+
         box-sizing: border-box;
     }
 
-    .contloc p {       
-        top: 268px;        
+    .contloc p {
+        top: 268px;
     }
-
-
 }
