modified:   src/css/details.css 	modified:   src/css/maincontener.css

--- a/src/css/details.css
+++ b/src/css/details.css
@@ -45,6 +45,10 @@ i {
     width: 100%;
 }
 
+.aproposdetails .details{
+    width: 100%;
+}
+
 .bgtest {
     background: rgba(246, 246, 246, 1);
     font-family: Montserrat;
