--- a/src/css/maincontener.css
+++ b/src/css/maincontener.css
@@ -38,10 +38,11 @@
     font-weight: 700;
     line-height: 25.67px;
     text-align: left;
-    width: 300px;
+    width: calc(100% - 40px);
     height: 52px;
     top: 195px;
-    left: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: flex;
     align-items: center;
 }
