new file:   src/componement/ErrorContent.jsx 	modified:   src/css/details.css 	modified:   src/css/eror.css 	modified:   src/css/logement.css 	modified:   src/pages/Error.jsx 	modified:   src/pages/Logement.jsx

--- a/src/css/logement.css
+++ b/src/css/logement.css
@@ -51,12 +51,9 @@
         gap: 10px;
     }
 
-    /* .summ div {
-        width: 90%;
-        display: flex;
-
-    }  */
-
+    .details {       
+        width: 47%;
+    }
     .hoste_rating {
         display: flex;
         flex-direction:column;        
