--- a/src/css/eror.css
+++ b/src/css/eror.css
@@ -14,8 +14,10 @@
     line-height: 26px;
     text-align: center;
     width: 260px;
-    height: 52px;
-
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #ff6060;
 }
 
@@ -24,6 +26,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    gap: 5px;
 }
 
 @media screen and (min-width: 900px) {
@@ -38,10 +42,11 @@
 
     .texterror {
         font-family: Montserrat;
+        width: 70%;
         font-size: 36px;
         font-weight: 500;
         line-height: 51.34px;
-        text-align: left;
+        text-align: center;
 
         color: #ff6060;
     }
