--- a/src/css/eror.css
+++ b/src/css/eror.css
@@ -13,7 +13,7 @@
     font-weight: 500;
     line-height: 26px;
     text-align: center;
-    width: 260px;
+    width: 100%;
     height: 52px;
 
     color: #ff6060;
