modified:   src/css/logementimg.css 	modified:   src/pages/Apropos.jsx

--- a/src/css/logementimg.css
+++ b/src/css/logementimg.css
@@ -64,6 +64,11 @@
     bottom: 15px;
 }
 
+
+.activate{
+    display: none;
+}
+
 @media screen and (min-width: 980px) {
     .imgcontente {
         height: 415px;
